@@ -8,12 +8,15 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Test", "Test\Test.csproj", 
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Misc", "Misc", "{F9D856F4-28DD-4A99-A325-E37860B8FDB4}"
 	ProjectSection(SolutionItems) = preProject
+		ChangeLog.txt = ChangeLog.txt
 		CONTRIBUTORS.md = CONTRIBUTORS.md
 		Dockerfile = Dockerfile
 		Dockerfile.build = Dockerfile.build
 		Jenkinsfile = Jenkinsfile
 		LICENSE.md = LICENSE.md
+		paket.dependencies = paket.dependencies
 		README.md = README.md
+		release.sh = release.sh
 		startservers.sh = startservers.sh
 		stopservers.sh = stopservers.sh
 		test.sh = test.sh
