@@ -10,7 +10,7 @@ nuget Microsoft.Extensions.Http.Polly 2.2.0
 nuget OPCFoundation.NetStandard.Opc.Ua 1.4.355.26
 nuget Prometheus.Client.MetricPusher 1.0.1
 nuget YamlDotNet 6.1.1
-nuget CogniteSdk 0.10.1
+nuget CogniteSdk 0.12.5
 nuget AdysTech.InfluxDB.Client.Net.Core 0.8.0
 nuget Serilog 2.8.0
 nuget Serilog.Sinks.GoogleCloudLogging 2.0.0
